# uk-retejo

./: .dockerignore  .env  .env.django.example  .env.example  .gitignore  Dockerfile  Makefile  compose.yaml  docker-compose.yaml  install.py  justfile  minimal-uv-pyproject  pyproject.toml  requirements.txt
.docker/: Dockerfile  pyproject.toml
.github/workflows/: docker-image.yaml
apps/base/: blocks.py  models.py  views.py
apps/base/embeds/: finders.py
apps/devel/: constants.py  urls.py  views.py
apps/devel/data/: registration.json
apps/home/: blocks.py  models.py
apps/home/migrations/: 0003_homepage_body.py  0004_alter_homepage_body.py  0005_alter_homepage_body.py  0006_alter_homepage_body.py  0007_alter_homepage_body.py  0008_alter_homepage_body.py  0010_basicpage.py  0011_registrationpage.py  0012_alter_homepage_body.py  0013_alter_homepage_body.py  0014_alter_homepage_body.py  0017_delete_registrationpage.py  0018_basicpage_header_image.py
apps/program/: blocks.py  models.py
apps/program/migrations/: 0001_initial.py  0003_programproposalpage.py
apps/registration/: models.py
apps/registration/migrations/: 0001_initial.py  0003_remove_registrationpage_vue_module.py
apps/search/: views.py
apps/site_settings/: models.py
apps/site_settings/migrations/: 0001_initial.py
backend/: .env.example  justfile  manage.py  pyproject.toml
backend/apps/base/: admin.py  apps.py  blocks.py  models.py  views.py
backend/apps/core/: apps.py  content_blocks.py  models.py
backend/apps/devel/: utils.py
backend/apps/home/: models.py
backend/apps/program/: blocks.py  models.py
backend/apps/registration/: models.py
backend/apps/search/: views.py
backend/config/: context_processors.py  embeds.py  error_tracking.py  logs.py  settings.py  urls.py  utils.py  wsgi.py
backend/config/static/: countdown.js  load-vue.js  uk-retejo.css  (+1 more)
backend/evente/: admin.py  apps.py  choices.py  fields.py  input.css  mixins.py  models.py  package-lock.json  package.json  urls.py  utils.py
config/: decouple.py  logging.py  rsgi.py  settings.py  urls.py  utils.py
config/dev/: urls.py  views.py
config/static/: uk-retejo.css  uk-retejo.js
config/templates/: base.html  main_menu.html  navigation.html  navigation_desktop.html  navigation_mobile.html
containers/: Containerfile
etc/caddy/: Caddyfile
style/: app.css  justfile  package-lock.json  package.json
style/css/: countdown.css  footer.css  navigation.css  page.css  tables.css  typography.css
ui/: app.css  input.css  package-lock.json  package.json
ui/css/: about.css  navigation.css  perks.css  photoswipe.css  presentation.css  program-proposal.css  timeline.css  typography.css
uk-aligxilo/: .env.development  .env.production  .env.production.example  README.md  package-lock.json  package.json  replace-vite-env.sh  vite.config.mts
uk-aligxilo/src/: App.vue  edit.js  mixins.js  participants.js  price.js  registration.js  router.js  store.js
(+236 files in other folders)
