[project]
name = "uk-retejo"
version = "0.1.0"
description = "La retejo de UK"
authors = { name = "Baptiste Darthenay", email = "baptiste.darthenay@gmail.com" }
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "bpython>=0.26",
  "dj-database-url>=2.3.0",
  "django>=6",
  "django-debug-toolbar>=6.2.0",
  "django-extensions>=4.1",
  "django-rsgi[server]>=1.0.0",
  "django-vite>=3.1.0",
  "psycopg[binary]>=3.2.6",
  "python-slugify>=8.0.4",
  "sentry-sdk[django]>=2.54.0",
  "toml-decouple>=0.9.0",
  "wagtail>=7.0,<8",
  "wagtailmenus>=4.0.5",
  "whitenoise>=6.9.0",
]

[tool.ruff.lint.isort]
known-third-party = ["django", "wagtail"]

[dependency-groups]
dev = [
    "django-cors-headers>=4.9.0",
    "django-stubs[compatible-mypy]>=5.2.9",
    "faker>=40.4.0",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings"
