[project]
name = "uk-retejo"
version = "0"
requires-python = ">=3.12"
dependencies = [
  "dj-database-url>=2.3.0",
  "django>=5.2,<6",
  "psycopg[binary]>=3.2.6",
  "python-decouple>=3.8",
  "toml-decouple>=0.4.0",
  "wagtail>=7.0,<8",
  "whitenoise>=6.9.0",
]

[dependency-groups]
production = ["granian>=2.5.4"]
